fixed cycle collapse bug!!!

--- a/src/index.css
+++ b/src/index.css
@@ -41,13 +41,17 @@ ol, ul {
 }
 
 .collapseChoice {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
   width: 50px;
   height: 50px;
   border: 5px;
   border-color: black;
   text-align: center;
-  padding-top: 20px;
   cursor: default;
+  border-style: solid;
 }
 
 .xScore{
@@ -72,8 +76,10 @@ ol, ul {
 .game {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .game-info {
   margin-left: 20px;
+  top: 0px;
 }
